Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32011

LanguageClient: Crash on close

XMLWordPrintable

    • All
    • b8bc12b3a (15.0), 22756645d (master)

      Steps to reproduce:

      • start QC, have python LSP setup (or let it install when creating the projects below)
      • create Qt widget application (python)
      • create Qt Quick application (python)
      • close QC

       

        1. crashonclose.txt
          481 kB
          Christian Stenger
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes