Python: fix crash on shutdown

Do not add a temporary document to a Language Client since it will not
get properly removed when it is closed again.

Fixes: QTCREATORBUG-32011
Change-Id: I66dfddec10610e54c1ae53e4a5e9db828ed03182
Reviewed-by: Christian Stenger <christian.stenger@qt.io>